--- a/pom.xml
+++ b/pom.xml
@@ -39,18 +39,13 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-	<dependency>
-      <groupId>org.springdoc</groupId>
-      <artifactId>springdoc-openapi-ui</artifactId>
-      <version>1.6.15</version>
-    </dependency>
-	<!--<build>
+	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
-	</build>-->
+	</build>
 
 </project>
